force-app/main/default/objects/Account_History__c/fields/Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account History</relationshipLabel>
    <relationshipName>Account_History</relationshipName>
    <type>Lookup</type>
</CustomField>