force-app/main/default/objects/Account_History__c/fields/AT01_Deletion_Flag__c.field-meta.xml
<CustomField>
    <fullName>AT01_Deletion_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AT01 Deletion Flag</label>
    <type>Checkbox</type>
</CustomField>