force-app/main/default/objects/Account_History__c/fields/AT01_National_Account_Partner__c.field-meta.xml
<CustomField>
    <fullName>AT01_National_Account_Partner__c</fullName>
    <label>AT01 National Account Partner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>