force-app/main/default/objects/Account_History__c/fields/AT01_National_Account_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>AT01_National_Account_Partner_Name__c</fullName>
    <label>AT01 National Account Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>