force-app/main/default/objects/Account_History__c/fields/AT01_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>AT01_Sales_Group__c</fullName>
    <label>AT01 National Sales Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>