force-app/main/default/objects/Account_History__c/fields/AT01_Sales_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>AT01_Sales_Group_Description__c</fullName>
    <label>AT01 National Sales Group Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>