force-app/main/default/objects/Account_History__c/fields/Credit_Limit_Updated__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Updated__c</fullName>
    <label>Credit Limit Updated</label>
    <type>DateTime</type>
</CustomField>