force-app/main/default/objects/Account_History__c/fields/DE01_Deletion_Flag__c.field-meta.xml
<CustomField>
    <fullName>DE01_Deletion_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DE01 Deletion Flag</label>
    <type>Checkbox</type>
</CustomField>