force-app/main/default/objects/Account_History__c/fields/DE01_National_Account_Partner__c.field-meta.xml
<CustomField>
    <fullName>DE01_National_Account_Partner__c</fullName>
    <label>DE01 National Account Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>