force-app/main/default/objects/Account_History__c/fields/DE01_Primary_Sales_Repr__c.field-meta.xml
<CustomField>
    <fullName>DE01_Primary_Sales_Repr__c</fullName>
    <label>DE01 Primary Sales Repr.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>