force-app/main/default/objects/Account_History__c/fields/DE01_Primary_Sales_Repr_Name__c.field-meta.xml
<CustomField>
    <fullName>DE01_Primary_Sales_Repr_Name__c</fullName>
    <label>DE01 Primary Sales Repr. Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>