force-app/main/default/objects/Account_History__c/fields/IWO_Member__c.field-meta.xml
<CustomField>
    <fullName>IWO_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IWO Member</label>
    <type>Checkbox</type>
</CustomField>