force-app/main/default/objects/Account_History__c/fields/Last_Modified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Name__c</fullName>
    <label>Last Modified By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>