force-app/main/default/objects/Account_History__c/fields/Online_Integration_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Online_Integration_EmailID__c</fullName>
    <label>Online Integration EmailID</label>
    <type>Email</type>
</CustomField>