force-app/main/default/objects/Account_History__c/fields/Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Number__c</fullName>
    <label>Ship To Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>